syntax = "proto3";

package com;


//
// Pinger
//
service Pinger {
    rpc Ping(PingRequest) returns (PongResponse) {}
}


message PingRequest {
    string msg = 1;
}

message PongResponse {
    string msg = 1;
}

//
//
//


//
// RandomMsg
//

service RandomMsg {
    rpc GetRandomMsg(RandomMsgRequest) returns (RandomMsgResponse) {}
}

message RandomMsgRequest {
}

message RandomMsgResponse {
    string msg = 1;
}

//
//
//
